--- a/features/i18n/values.yaml
+++ b/features/i18n/values.yaml
@@ -16,7 +16,7 @@ global:
         disabled: false
 
       # test config viewer
-      - package: oci://ghcr.io/redhat-developer/rhdh-plugin-export-overlays/proberaum-backstage-plugin-config-viewer:next__0.11.0!proberaum-backstage-plugin-config-viewer
+      - package: oci://ghcr.io/redhat-developer/rhdh-plugin-export-overlays/proberaum-backstage-plugin-config-viewer:bs_1.45.3__0.12.0
         pluginConfig:
           dynamicPlugins:
             frontend:
@@ -29,7 +29,7 @@ global:
                     path: /config-viewer
                     menuItem:
                       text: Config viewer
-      - package: oci://ghcr.io/redhat-developer/rhdh-plugin-export-overlays/proberaum-backstage-plugin-config-viewer-backend:next__0.11.0!proberaum-backstage-plugin-config-viewer-backend
+      - package: oci://ghcr.io/redhat-developer/rhdh-plugin-export-overlays/proberaum-backstage-plugin-config-viewer-backend:bs_1.45.3__0.12.0
         pluginConfig:
           configViewer:
             dangerouslyAnyoneCanReadAllTheFiles: true
